2007-09-17  H.J. Lu  <hongjiu.lu@intel.com>

PR gas/5035
	* config/obj-coff.c (obj_coff_endef): Remove checking size of
	def_symbol_in_progress.